# serializer version: 1
# name: TestAntCostEqual.test_snapshot
  0.821719583982276
# ---
# name: TestAntCostEqual.test_snapshot.1
  0.991608887048081
# ---
# name: TestAntCostEqual.test_snapshot.10
  0.028773024016133
# ---
# name: TestAntCostEqual.test_snapshot.100
  0.994278364185647
# ---
# name: TestAntCostEqual.test_snapshot.101
  -0.085936846627804
# ---
# name: TestAntCostEqual.test_snapshot.102
  0.060763057860797
# ---
# name: TestAntCostEqual.test_snapshot.103
  0.018254963801364
# ---
# name: TestAntCostEqual.test_snapshot.104
  0.572132107581056
# ---
# name: TestAntCostEqual.test_snapshot.105
  1.305099251586962
# ---
# name: TestAntCostEqual.test_snapshot.106
  -0.464664456928691
# ---
# name: TestAntCostEqual.test_snapshot.107
  -0.601339741376164
# ---
# name: TestAntCostEqual.test_snapshot.108
  0.592951073927442
# ---
# name: TestAntCostEqual.test_snapshot.109
  -1.24556150010968
# ---
# name: TestAntCostEqual.test_snapshot.11
  0.064552322654166
# ---
# name: TestAntCostEqual.test_snapshot.110
  0.169841530885642
# ---
# name: TestAntCostEqual.test_snapshot.111
  1.060608774201369
# ---
# name: TestAntCostEqual.test_snapshot.112
  -0.077839953420462
# ---
# name: TestAntCostEqual.test_snapshot.113
  -0.007412282726553
# ---
# name: TestAntCostEqual.test_snapshot.114
  -1.481378548487244
# ---
# name: TestAntCostEqual.test_snapshot.115
  -0.191461178270048
# ---
# name: TestAntCostEqual.test_snapshot.116
  0.441897125823563
# ---
# name: TestAntCostEqual.test_snapshot.117
  -0.165822142429174
# ---
# name: TestAntCostEqual.test_snapshot.118
  0.092025560230942
# ---
# name: TestAntCostEqual.test_snapshot.119
  -2.457212293528775
# ---
# name: TestAntCostEqual.test_snapshot.12
  -0.011317160234534
# ---
# name: TestAntCostEqual.test_snapshot.120
  0.374035379034921
# ---
# name: TestAntCostEqual.test_snapshot.121
  -2.625398260991904
# ---
# name: TestAntCostEqual.test_snapshot.122
  1.495059282386685
# ---
# name: TestAntCostEqual.test_snapshot.123
  -4.127453640396519
# ---
# name: TestAntCostEqual.test_snapshot.124
  -0.699814170628164
# ---
# name: TestAntCostEqual.test_snapshot.125
  1.145990857854273
# ---
# name: TestAntCostEqual.test_snapshot.126
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.127
  -1.133168749852851
# ---
# name: TestAntCostEqual.test_snapshot.128
  -0.133168749852851
# ---
# name: TestAntCostEqual.test_snapshot.129
  1.284071415643072
# ---
# name: TestAntCostEqual.test_snapshot.13
  -0.085929246288324
# ---
# name: TestAntCostEqual.test_snapshot.130
  False
# ---
# name: TestAntCostEqual.test_snapshot.131
  False
# ---
# name: TestAntCostEqual.test_snapshot.132
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.000312714147568,
    'cost_velocity': 1.284071415643072,
    'distance_from_origin': 0.039746261732945,
    'forward_reward': -0.133168749852851,
    'penalty_health': 0.0,
    'reward_ctrl': -0.000312714147568,
    'reward_forward': -0.133168749852851,
    'reward_survive': 1.0,
    'x_position': 0.038038982698535,
    'x_velocity': -0.133168749852851,
    'y_position': -0.011523936697342,
    'y_velocity': 0.017900822177599,
  })
# ---
# name: TestAntCostEqual.test_snapshot.133
  0.751613207452132
# ---
# name: TestAntCostEqual.test_snapshot.134
  0.995515223073717
# ---
# name: TestAntCostEqual.test_snapshot.135
  -0.072508299155482
# ---
# name: TestAntCostEqual.test_snapshot.136
  0.057764174976177
# ---
# name: TestAntCostEqual.test_snapshot.137
  0.018849065530908
# ---
# name: TestAntCostEqual.test_snapshot.138
  0.52874327314702
# ---
# name: TestAntCostEqual.test_snapshot.139
  1.043417647179041
# ---
# name: TestAntCostEqual.test_snapshot.14
  0.03687507840825
# ---
# name: TestAntCostEqual.test_snapshot.140
  -0.548686034880311
# ---
# name: TestAntCostEqual.test_snapshot.141
  -0.662985701451056
# ---
# name: TestAntCostEqual.test_snapshot.142
  0.550667080947655
# ---
# name: TestAntCostEqual.test_snapshot.143
  -1.187663480279202
# ---
# name: TestAntCostEqual.test_snapshot.144
  0.238684780949693
# ---
# name: TestAntCostEqual.test_snapshot.145
  1.005416614438223
# ---
# name: TestAntCostEqual.test_snapshot.146
  -0.678571605507751
# ---
# name: TestAntCostEqual.test_snapshot.147
  -1.367997970301458
# ---
# name: TestAntCostEqual.test_snapshot.148
  -0.426257725347087
# ---
# name: TestAntCostEqual.test_snapshot.149
  0.592264601440893
# ---
# name: TestAntCostEqual.test_snapshot.15
  -0.0958882600829
# ---
# name: TestAntCostEqual.test_snapshot.150
  -0.060830609728925
# ---
# name: TestAntCostEqual.test_snapshot.151
  -0.461777836527956
# ---
# name: TestAntCostEqual.test_snapshot.152
  -1.159159978887868
# ---
# name: TestAntCostEqual.test_snapshot.153
  -8.360973148991114
# ---
# name: TestAntCostEqual.test_snapshot.154
  -0.782574351632348
# ---
# name: TestAntCostEqual.test_snapshot.155
  0.146750513160343
# ---
# name: TestAntCostEqual.test_snapshot.156
  -0.877561731203333
# ---
# name: TestAntCostEqual.test_snapshot.157
  4.733934123185799
# ---
# name: TestAntCostEqual.test_snapshot.158
  3.405911840309528
# ---
# name: TestAntCostEqual.test_snapshot.159
  -3.330333085752392
# ---
# name: TestAntCostEqual.test_snapshot.16
  0.087845030130727
# ---
# name: TestAntCostEqual.test_snapshot.160
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.161
  -1.549365229951522
# ---
# name: TestAntCostEqual.test_snapshot.162
  -0.549365229951522
# ---
# name: TestAntCostEqual.test_snapshot.163
  2.400532615782733
# ---
# name: TestAntCostEqual.test_snapshot.164
  False
# ---
# name: TestAntCostEqual.test_snapshot.165
  False
# ---
# name: TestAntCostEqual.test_snapshot.166
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.000324584794044,
    'cost_velocity': 2.400532615782733,
    'distance_from_origin': 0.067460683437026,
    'forward_reward': -0.549365229951522,
    'penalty_health': 0.0,
    'reward_ctrl': -0.000324584794044,
    'reward_forward': -0.549365229951522,
    'reward_survive': 1.0,
    'x_position': 0.010570721200959,
    'x_velocity': -0.549365229951522,
    'y_position': -0.066627349212483,
    'y_velocity': -1.102068250302835,
  })
# ---
# name: TestAntCostEqual.test_snapshot.167
  0.711804146583538
# ---
# name: TestAntCostEqual.test_snapshot.168
  0.996350576242984
# ---
# name: TestAntCostEqual.test_snapshot.169
  -0.06015452041582
# ---
# name: TestAntCostEqual.test_snapshot.17
  -0.004992591098625
# ---
# name: TestAntCostEqual.test_snapshot.170
  0.058621346438584
# ---
# name: TestAntCostEqual.test_snapshot.171
  0.015182247381219
# ---
# name: TestAntCostEqual.test_snapshot.172
  0.461192022926435
# ---
# name: TestAntCostEqual.test_snapshot.173
  0.521855817277826
# ---
# name: TestAntCostEqual.test_snapshot.174
  -0.535568801303754
# ---
# name: TestAntCostEqual.test_snapshot.175
  -0.664580105855161
# ---
# name: TestAntCostEqual.test_snapshot.176
  0.408162640558384
# ---
# name: TestAntCostEqual.test_snapshot.177
  -0.894536226795918
# ---
# name: TestAntCostEqual.test_snapshot.178
  0.340881403187863
# ---
# name: TestAntCostEqual.test_snapshot.179
  0.795541957842472
# ---
# name: TestAntCostEqual.test_snapshot.18
  -0.018486236354526
# ---
# name: TestAntCostEqual.test_snapshot.180
  -0.444658542875536
# ---
# name: TestAntCostEqual.test_snapshot.181
  -1.284064469837557
# ---
# name: TestAntCostEqual.test_snapshot.182
  -1.146643265430972
# ---
# name: TestAntCostEqual.test_snapshot.183
  0.608294522515863
# ---
# name: TestAntCostEqual.test_snapshot.184
  0.004755707466936
# ---
# name: TestAntCostEqual.test_snapshot.185
  0.451049140703333
# ---
# name: TestAntCostEqual.test_snapshot.186
  -1.54676946661769
# ---
# name: TestAntCostEqual.test_snapshot.187
  -10.256484879948953
# ---
# name: TestAntCostEqual.test_snapshot.188
  0.33011263324734
# ---
# name: TestAntCostEqual.test_snapshot.189
  -0.209683618871645
# ---
# name: TestAntCostEqual.test_snapshot.19
  -0.068092954440394
# ---
# name: TestAntCostEqual.test_snapshot.190
  -4.78987517526913
# ---
# name: TestAntCostEqual.test_snapshot.191
  6.976444902220714
# ---
# name: TestAntCostEqual.test_snapshot.192
  0.698466795787025
# ---
# name: TestAntCostEqual.test_snapshot.193
  -5.049843744069792
# ---
# name: TestAntCostEqual.test_snapshot.194
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.195
  -1.549285344044221
# ---
# name: TestAntCostEqual.test_snapshot.196
  -0.549285344044221
# ---
# name: TestAntCostEqual.test_snapshot.197
  2.40028507727022
# ---
# name: TestAntCostEqual.test_snapshot.198
  False
# ---
# name: TestAntCostEqual.test_snapshot.199
  False
# ---
# name: TestAntCostEqual.test_snapshot.2
  -0.07742714122803
# ---
# name: TestAntCostEqual.test_snapshot.20
  0.122254133867403
# ---
# name: TestAntCostEqual.test_snapshot.200
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.000154174411297,
    'cost_velocity': 2.40028507727022,
    'distance_from_origin': 0.134075711510765,
    'forward_reward': -0.549285344044221,
    'penalty_health': 0.0,
    'reward_ctrl': -0.000154174411297,
    'reward_forward': -0.549285344044221,
    'reward_survive': 1.0,
    'x_position': -0.016893546001252,
    'x_velocity': -0.549285344044221,
    'y_position': -0.133007159659251,
    'y_velocity': -1.327596208935348,
  })
# ---
# name: TestAntCostEqual.test_snapshot.21
  -0.01545294820688
# ---
# name: TestAntCostEqual.test_snapshot.22
  -0.042832782216311
# ---
# name: TestAntCostEqual.test_snapshot.23
  -0.035213355048823
# ---
# name: TestAntCostEqual.test_snapshot.24
  0.053230918555335
# ---
# name: TestAntCostEqual.test_snapshot.25
  0.036544406436408
# ---
# name: TestAntCostEqual.test_snapshot.26
  0.041273261159599
# ---
# name: TestAntCostEqual.test_snapshot.27
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.28
  -1.0
# ---
# name: TestAntCostEqual.test_snapshot.29
  0.0
# ---
# name: TestAntCostEqual.test_snapshot.3
  0.090744266737461
# ---
# name: TestAntCostEqual.test_snapshot.30
  dict({
  })
# ---
# name: TestAntCostEqual.test_snapshot.31
  0.840791971298254
# ---
# name: TestAntCostEqual.test_snapshot.32
  0.993216619372432
# ---
# name: TestAntCostEqual.test_snapshot.33
  -0.074838608953256
# ---
# name: TestAntCostEqual.test_snapshot.34
  0.081122742369782
# ---
# name: TestAntCostEqual.test_snapshot.35
  0.03659276270993
# ---
# name: TestAntCostEqual.test_snapshot.36
  0.184019975640965
# ---
# name: TestAntCostEqual.test_snapshot.37
  0.440592211838723
# ---
# name: TestAntCostEqual.test_snapshot.38
  -0.156255365231319
# ---
# name: TestAntCostEqual.test_snapshot.39
  -0.381012789795465
# ---
# name: TestAntCostEqual.test_snapshot.4
  0.049822996525722
# ---
# name: TestAntCostEqual.test_snapshot.40
  0.178546316603899
# ---
# name: TestAntCostEqual.test_snapshot.41
  -0.383466221731187
# ---
# name: TestAntCostEqual.test_snapshot.42
  0.166316440687689
# ---
# name: TestAntCostEqual.test_snapshot.43
  0.414017681654565
# ---
# name: TestAntCostEqual.test_snapshot.44
  -0.196281943424577
# ---
# name: TestAntCostEqual.test_snapshot.45
  -0.177601396196967
# ---
# name: TestAntCostEqual.test_snapshot.46
  0.129771666035401
# ---
# name: TestAntCostEqual.test_snapshot.47
  0.157271424152114
# ---
# name: TestAntCostEqual.test_snapshot.48
  -0.804124865006064
# ---
# name: TestAntCostEqual.test_snapshot.49
  -1.025311232854181
# ---
# name: TestAntCostEqual.test_snapshot.5
  0.057212861055391
# ---
# name: TestAntCostEqual.test_snapshot.50
  5.103576027721423
# ---
# name: TestAntCostEqual.test_snapshot.51
  12.541117699928481
# ---
# name: TestAntCostEqual.test_snapshot.52
  -5.79477567722775
# ---
# name: TestAntCostEqual.test_snapshot.53
  -5.304115207359589
# ---
# name: TestAntCostEqual.test_snapshot.54
  3.731844297088785
# ---
# name: TestAntCostEqual.test_snapshot.55
  -7.490527817538243
# ---
# name: TestAntCostEqual.test_snapshot.56
  3.999427551521588
# ---
# name: TestAntCostEqual.test_snapshot.57
  9.033972437290055
# ---
# name: TestAntCostEqual.test_snapshot.58
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.59
  -1.085737269125082
# ---
# name: TestAntCostEqual.test_snapshot.6
  -0.074377273464891
# ---
# name: TestAntCostEqual.test_snapshot.60
  -0.085737269125081
# ---
# name: TestAntCostEqual.test_snapshot.61
  1.17882541756719
# ---
# name: TestAntCostEqual.test_snapshot.62
  False
# ---
# name: TestAntCostEqual.test_snapshot.63
  False
# ---
# name: TestAntCostEqual.test_snapshot.64
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.00031490790844,
    'cost_velocity': 1.17882541756719,
    'distance_from_origin': 0.052401502902275,
    'forward_reward': -0.085737269125081,
    'penalty_health': 0.0,
    'reward_ctrl': -0.00031490790844,
    'reward_forward': -0.085737269125081,
    'reward_survive': 1.0,
    'x_position': 0.050504346254939,
    'x_velocity': -0.085737269125081,
    'y_position': -0.01397241982544,
    'y_velocity': -0.034962155517015,
  })
# ---
# name: TestAntCostEqual.test_snapshot.65
  0.827647252096842
# ---
# name: TestAntCostEqual.test_snapshot.66
  0.995293688030607
# ---
# name: TestAntCostEqual.test_snapshot.67
  -0.072526534215099
# ---
# name: TestAntCostEqual.test_snapshot.68
  0.057085491385892
# ---
# name: TestAntCostEqual.test_snapshot.69
  0.029523263275106
# ---
# name: TestAntCostEqual.test_snapshot.7
  -0.009922812420887
# ---
# name: TestAntCostEqual.test_snapshot.70
  0.386459096285527
# ---
# name: TestAntCostEqual.test_snapshot.71
  1.208452412969746
# ---
# name: TestAntCostEqual.test_snapshot.72
  -0.387996644393365
# ---
# name: TestAntCostEqual.test_snapshot.73
  -0.521955789018238
# ---
# name: TestAntCostEqual.test_snapshot.74
  0.339316363732256
# ---
# name: TestAntCostEqual.test_snapshot.75
  -0.848463329346089
# ---
# name: TestAntCostEqual.test_snapshot.76
  0.225694646258286
# ---
# name: TestAntCostEqual.test_snapshot.77
  0.836601011644088
# ---
# name: TestAntCostEqual.test_snapshot.78
  -0.047090912700903
# ---
# name: TestAntCostEqual.test_snapshot.79
  0.205922190871032
# ---
# name: TestAntCostEqual.test_snapshot.8
  -0.025840395153484
# ---
# name: TestAntCostEqual.test_snapshot.80
  -0.704241760883163
# ---
# name: TestAntCostEqual.test_snapshot.81
  -0.06495336401842
# ---
# name: TestAntCostEqual.test_snapshot.82
  -0.887054429336688
# ---
# name: TestAntCostEqual.test_snapshot.83
  0.371887862538036
# ---
# name: TestAntCostEqual.test_snapshot.84
  3.01216739258021
# ---
# name: TestAntCostEqual.test_snapshot.85
  18.12550445638559
# ---
# name: TestAntCostEqual.test_snapshot.86
  -3.494216846612324
# ---
# name: TestAntCostEqual.test_snapshot.87
  -0.539023411367595
# ---
# name: TestAntCostEqual.test_snapshot.88
  2.709549200894454
# ---
# name: TestAntCostEqual.test_snapshot.89
  -11.081676080943627
# ---
# name: TestAntCostEqual.test_snapshot.9
  0.08535299776972
# ---
# name: TestAntCostEqual.test_snapshot.90
  -1.583948806863844
# ---
# name: TestAntCostEqual.test_snapshot.91
  7.876496394579283
# ---
# name: TestAntCostEqual.test_snapshot.92
  1.0
# ---
# name: TestAntCostEqual.test_snapshot.93
  -1.116138521275226
# ---
# name: TestAntCostEqual.test_snapshot.94
  -0.116138521275226
# ---
# name: TestAntCostEqual.test_snapshot.95
  1.245765198674449
# ---
# name: TestAntCostEqual.test_snapshot.96
  False
# ---
# name: TestAntCostEqual.test_snapshot.97
  False
# ---
# name: TestAntCostEqual.test_snapshot.98
  dict({
    'cost_contact': 0.0,
    'cost_ctrl': 0.000216822195053,
    'cost_velocity': 1.245765198674449,
    'distance_from_origin': 0.046390628164513,
    'forward_reward': -0.116138521275226,
    'penalty_health': 0.0,
    'reward_ctrl': -0.000216822195053,
    'reward_forward': -0.116138521275226,
    'reward_survive': 1.0,
    'x_position': 0.044697420191177,
    'x_velocity': -0.116138521275226,
    'y_position': -0.012418977806222,
    'y_velocity': 0.031068840384374,
  })
# ---
# name: TestAntCostEqual.test_snapshot.99
  0.771432426124812
# ---
